--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         }
 
         // smooth scrooling
-        $('#navbar a, .btn').on('click', function (e) {
+        $('#navbar a').on('click', function (e) {
             if(this.hash !== '') {
                 e.preventDefault()
 
